add: toggle reply section

--- a/src/css/discussion-card.scss
+++ b/src/css/discussion-card.scss
@@ -51,5 +51,11 @@ $imageWidth: 40px;
                 cursor: pointer;
             }
         }
+        .replies {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-top: 2rem;
+        }
     }
 }
